# vidyaflow-school-management

./: .editorconfig  .env.example  .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  tsconfig.json  turbo.json
apps/backend/: manage.py  pyproject.toml  requirements.txt
apps/backend/ai/assistants/: __init__.py  admin.py  apps.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/backend/ai/ocr/: __init__.py  admin.py  apps.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/backend/ai/predictions/: __init__.py  admin.py  apps.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/backend/ai/prompts/: __init__.py  admin.py  apps.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/backend/ai/providers/: __init__.py  admin.py  apps.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/backend/common/exceptions/: __init__.py
apps/backend/common/middleware/: __init__.py
apps/backend/common/mixins/: __init__.py
apps/backend/common/models/: __init__.py
apps/backend/common/pagination/: __init__.py
apps/backend/common/permissions/: __init__.py
apps/backend/common/serializers/: __init__.py
apps/backend/common/utils/: __init__.py
apps/backend/common/validators/: __init__.py
apps/backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
apps/backend/config/settings/: __init__.py  base.py  development.py  production.py  testing.py
apps/backend/core/accounts/: __init__.py  admin.py  apps.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/backend/core/authentication/: admin.py  (+13 more)
(+662 files in other folders)
