[tool.poetry]
name = "vidyaflow-backend"
version = "0.1.0"
description = "VidyaFlow Backend — Enterprise School Management Platform"
authors = ["VidyaFlow Team <team@vidyaflow.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "." }]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1"
djangorestframework = "^3.15"
django-filter = "^24.0"
djangorestframework-simplejwt = "^5.3"
django-cors-headers = "^4.3"
channels = "^4.1"
channels-redis = "^4.2"
celery = "^5.4"
django-celery-beat = "^2.7"
django-celery-results = "^2.5"
redis = "^5.0"
django-redis = "^5.4"
psycopg = { extras = ["binary"], version = "^3.1" }
drf-spectacular = "^0.27"
django-storages = { extras = ["s3"], version = "^1.14" }
boto3 = "^1.35"
pillow = "^10.4"
python-decouple = "^3.8"
sentry-sdk = { extras = ["django"], version = "^2.0" }
gunicorn = "^22.0"
uvicorn = { extras = ["standard"], version = "^0.30" }

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4"
pytest = "^8.0"
pytest-django = "^4.9"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
factory-boy = "^3.3"
faker = "^28.0"
ruff = "^0.6"
mypy = "^1.11"
django-stubs = { extras = ["compatible-mypy"], version = "^5.0" }
djangorestframework-stubs = "^3.15"
ipython = "^8.27"
django-extensions = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 119
target-version = "py313"
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["core", "platform", "modules", "ai", "integrations", "common"]

[tool.mypy]
python_version = "3.13"
django_settings_module = "config.settings.development"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.testing"
python_files = "tests.py test_*.py *_test.py"
addopts = "--reuse-db --cov=. --cov-report=html"

[tool.coverage.run]
omit = ["*/migrations/*", "*/tests/*", "*/test_*.py", "manage.py"]
